swagger docs fixed
